fix overlap with sunburst

--- a/_sass/C-a-U-cfda-info.scss
+++ b/_sass/C-a-U-cfda-info.scss
@@ -11,6 +11,8 @@
     position: absolute;
     top: 2rem;
     left: 0;
+    z-index: 103;
+    background: white;
 }
 
 .cfda__contents.cfda__contents--active {
